Add magic link functionalities
